# ghrel

./: .gitignore  README.md  config.example.toml  dev.bat  ghrel.spec  pyproject.toml  run.bat
.github/workflows/: test.yml
scripts/: build_exe.py
src/ghrel/: __init__.py  __main__.py  cli.py  config.py  downloader.py  formatters.py  github_api.py  logging_setup.py  path_utils.py  progress.py  prompts.py  selector.py  state_machine.py  verifier.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli_smoke.py  test_state_machine_coverage.py  test_state_machine_e2e.py
tests/integration/: test_downloader.py  test_github_api.py
tests/unit/: test_config.py  test_formatters.py  test_logging_setup.py  test_path_utils.py  test_progress.py  test_prompts.py  test_selector.py  test_verifier.py
